--- a/index.html
+++ b/index.html
@@ -1,24 +1,8 @@
+<!-- Start of Omnidesk Widget script {literal}-->
 <script>
-!function(e,o){
-  if(!window.omni) window.omni=[]
-  window.omni.push(o)
-
-  o.g_config={widget_id:"9022-mzntu9p5"}
-  o.type_widget="messengers_mail"
-  o.email_widget=o.email_widget||{}
-  var w=o.email_widget
-  w.readyQueue=[]
-  w.ready=function(cb){ this.readyQueue.push(cb) }
-
-  var r=e.getElementsByTagName("script")[0]
-  var c=e.createElement("script")
-  c.type="text/javascript"
-  c.async=true
-  c.src="https://orlandina.omnidesk.ru/bundles/acmesite/js/cwidget0.2.min.js"
-  r.parentNode.insertBefore(c,r)
-}(document,{})
-
+!function(e,o){!window.omni?window.omni=[]:'';window.omni.push(o);o.g_config={widget_id:"16095-8y3h6haj"}; OmniWidgetApi.call('open'); o.type_widget = "messengers_mail"; o.email_widget=o.email_widget||{};var w=o.email_widget;w.readyQueue=[];o.config=function(e){ this.g_config.user=e};w.ready=function(e){this.readyQueue.push(e)};var r=e.getElementsByTagName("script")[0];c=e.createElement("script");c.type="text/javascript",c.async=!0;c.src="https://orlandina.omnidesk.ru/bundles/acmesite/js/cwidget0.2.min.js";r.parentNode.insertBefore(c,r)}(document,[]);
 </script>
+<!-- End of Omnidesk Widget script {/literal}-->
 
 <!-- “как в CodePen”: команда внутри ready -->
 <script>
