--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!-- Start of Omnidesk Widget script {literal}-->
 <script>
-!function(e,o){!window.omni?window.omni=[]:'';window.omni.push(o);o.g_config={widget_id:"16095-8y3h6haj"}; OmniWidgetApi.call('open'); o.type_widget = "messengers_mail"; o.email_widget=o.email_widget||{};var w=o.email_widget;w.readyQueue=[];o.config=function(e){ this.g_config.user=e};w.ready=function(e){this.readyQueue.push(e)};var r=e.getElementsByTagName("script")[0];c=e.createElement("script");c.type="text/javascript",c.async=!0;c.src="https://orlandina.omnidesk.ru/bundles/acmesite/js/cwidget0.2.min.js";r.parentNode.insertBefore(c,r)}(document,[]);
+!function(e,o){!window.omni?window.omni=[]:'';window.omni.push(o);o.g_config={widget_id:"16095-8y3h6haj"}; o.type_widget = "messengers_mail"; o.email_widget=o.email_widget||{};var w=o.email_widget;w.readyQueue=[];o.config=function(e){ this.g_config.user=e};w.ready=function(e){this.readyQueue.push(e)};var r=e.getElementsByTagName("script")[0];c=e.createElement("script");c.type="text/javascript",c.async=!0;c.src="https://orlandina.omnidesk.ru/bundles/acmesite/js/cwidget0.2.min.js";r.parentNode.insertBefore(c,r)}(document,[]);
 </script>
 <!-- End of Omnidesk Widget script {/literal}-->
-
-<!-- “как в CodePen”: команда внутри ready -->
 <script>
-omni.email_widget.ready(function () {
-  OmniWidgetApi.call('open')
-})
+(function () {
+  function openWhenApiReady(tries) {
+    // tries — чтобы не крутиться бесконечно
+    if (window.OmniWidgetApi && typeof OmniWidgetApi.call === 'function') {
+      OmniWidgetApi.call('open')        // раскрыть список каналов (как на твоём скрине)
+      // OmniWidgetApi.call('open_widget') // если нужна форма email
+      return
+    }
+    if (tries > 100) return // ~10 секунд
+    setTimeout(function(){ openWhenApiReady(tries + 1) }, 100)
+  }
+  openWhenApiReady(0)
+})()
 </script>
