--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 </script>
 <!-- End of Omnidesk Widget script {/literal}-->
 <script>
-OmniWidgetApi.call('open.16095')
+OmniWidgetApi.call('open')
 </script>
 
