--- a/index.html
+++ b/index.html
@@ -4,6 +4,5 @@
 </script>
 <!-- End of Omnidesk Widget script {/literal}-->
 <script>
-OmniWidgetApi.call('open')
-</script>
+<button onclick="OmniWidgetApi.call('open')">Открыть виджет</button></script>
 
