--- a/index.html
+++ b/index.html
@@ -4,5 +4,8 @@
 </script>
 <!-- End of Omnidesk Widget script {/literal}-->
 <script>
-<button onclick="OmniWidgetApi.call('open')">Открыть виджет</button></script>
+omni[0].email_widget.ready(function () {
+  OmniWidgetApi.call('open.16095')
+})
+</script>
 
