--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 </script>
 <script>
 omni[0].email_widget.ready(function () {
-  OmniWidgetApi.call('get_list')  // выведет таблицу в консоль
-  OmniWidgetApi.call('open')      // попытается открыть
+  OmniWidgetApi.call('get_list') 
 })
 </script>
 
