--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
 </script>
 <script>
 omni[0].email_widget.ready(function () {
-  OmniWidgetApi.call('get_list') 
+  OmniWidgetApi.call('open')
 })
 </script>
-
-
