--- a/index.html
+++ b/index.html
@@ -3,6 +3,5 @@
 </script>
 <script>
 omni[0].email_widget.ready(function () {
-  OmniWidgetApi.call('open')
+  OmniWidgetApi.call('hide_btn')
 })
-</script>
