--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <script>
 <script>
 omni[0].email_widget.ready(function () {
-  OmniWidgetApi.call('hide_btn')
+  OmniWidgetApi.call('close_widget')
 })
 </script>
