--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 !function(e,o){!window.omni?window.omni=[]:'';window.omni.push(o);o.g_config={widget_id:"16095-8y3h6haj"}; o.type_widget = "messengers_mail"; o.email_widget=o.email_widget||{};var w=o.email_widget;w.readyQueue=[];o.config=function(e){ this.g_config.user=e};w.ready=function(e){this.readyQueue.push(e)};var r=e.getElementsByTagName("script")[0];c=e.createElement("script");c.type="text/javascript",c.async=!0;c.src="https://orlandina.omnidesk.ru/bundles/acmesite/js/cwidget0.2.min.js";r.parentNode.insertBefore(c,r)}(document,[]);
 </script>
 <script>
-omni[0].email_widget.ready(function () {
-  OmniWidgetApi.call('hide_btn');
-});
+omni[0].config({
+				display_button: false
+ 	 		});
 </script>
