--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
 			   var w=o.email_widget;
 			   w.readyQueue=[];o.config=function(e){ this.g_config.user=e};
 			   w.ready=function(e){this.readyQueue.push(e)};
-			   w.ready(function () {
-    OmniWidgetApi.call('hide_btn');
-  });
 			   var r=e.getElementsByTagName("script")[0];
 			   c=e.createElement("script");c.type="text/javascript",c.async=!0;
 			   c.src="https://orlandina.omnidesk.ru/bundles/acmesite/js/cwidget0.2.min.js";
 			   r.parentNode.insertBefore(c,r)}(document,[]);
 </script>
+<script>
+omni[0].email_widget.ready(function () {
+  OmniWidgetApi.call('hide_btn.16095'); 
+});
+</script>
+
