--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </script>
 <script>
 omni[0].email_widget.ready(function () {
-  OmniWidgetApi.call('hide_btn.16095'); 
+  OmniWidgetApi.call('hide_btn'); 
 });
 </script>
 
