--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 			   var r=e.getElementsByTagName("script")[0];
 			   c=e.createElement("script");c.type="text/javascript",c.async=!0;
 			   c.src="https://orlandina.omnidesk.ru/bundles/acmesite/js/cwidget0.2.min.js";
-			   r.parentNode.insertBefore(c,r)}(document,[]);
+			   r.parentNode.insertBefore(c,r)
+			  }
+	(document,[]);
 </script>
 <script>
 omni[0].email_widget.ready(function () {
