--- a/index.html
+++ b/index.html
@@ -10,10 +10,6 @@
 			   r.parentNode.insertBefore(c,r)
 			  }
 	(document,[]);
+	omni[0].config({ diplay_button: false});
 </script>
-<script>
-omni[0].config({
-				diplay_button: false
-</script>
-
 
