--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 			   r.parentNode.insertBefore(c,r)
 			  }
 	(document,[]);
-		omni[0].config({ diplay_button: false});
 </script>
-
+<script>
+			omni[0].config({
+				display_button: false, 
+ 	 		});
+</script>
