--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 	(document,[]);
 </script>
 <script>
-			omni[0].config({
-				display_button: false, 
- 	 		});
+			omni[0].config({ display_button: true, diplay_button: false });
+
 </script>
 
